--- a/web-extension/package.json
+++ b/web-extension/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "chrome-extension-boilerplate-react-vite",
-  "version": "0.4.3",
-  "description": "chrome extension boilerplate",
+  "name": "tippy-extension",
+  "version": "0.1.0",
+  "description": "Enhances web browsing by dynamically attaching custom tooltips to elements on web pages",
   "license": "MIT",
   "private": true,
   "sideEffects": false,
   "repository": {
     "type": "git",
-    "url": "https://github.com/Jonghakseo/chrome-extension-boilerplate-react-vite.git"
+    "url": "https://github.com/dskline/tippy-extension.git"
   },
   "type": "module",
   "scripts": {
