--- a/web-extension/package.json
+++ b/web-extension/package.json
@@ -43,6 +43,7 @@
     "react-dom": "19.0.0"
   },
   "devDependencies": {
+    "@biomejs/biome": "2.0.0-beta.4",
     "@eslint/compat": "^1.2.5",
     "@eslint/eslintrc": "^3.2.0",
     "@eslint/js": "^9.20.0",
