--- a/web-extension/tsconfig.json
+++ b/web-extension/tsconfig.json
@@ -5,7 +5,11 @@
   "compilerOptions": {
     "noImplicitAny": false,
     "noEmit": false,
-    "target": "ESNext"
+    "target": "ESNext",
+    "baseUrl": ".",
+    "paths": {
+      "@extension/*": ["packages/*"]
+    },
   },
   "include": ["eslint.config.ts"]
 }
